Issues/51 (#54)
#51 Generate code for API responses